# Vulcor

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
shaders/: shader.vert
src/: debug.rs  devices.rs  main.rs  swapchain.rs  synchronous.rs
src/cmd/: command_pool.rs  mod.rs
src/core/: context.rs  debug.rs  graphics.rs  logical_device.rs  mod.rs  physical_device.rs
src/descriptor/: descriptor_pool.rs  mod.rs
src/math/: matrix.rs  vector.rs
src/pipeline/: mod.rs  render_pipeline.rs  shader.rs  traits.rs
src/resources/: buffer.rs  image.rs  mod.rs
